mais filmes adicionados

--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
         <span></span>
       </div>
     </header>
-    <!--Foto de <a href="https://unsplash.com/pt-br/@jeremyyappy?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Jeremy Yap</a> na <a href="https://unsplash.com/pt-br/fotografias/turned-on-projector-J39X2xX_8CQ?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
-      -->
     <main>
       <section id="inicio">
         <h1>O Melhor do Cinema Brasileiro</h1>
@@ -125,28 +123,6 @@
               <span>Disponivel em:</span>
               <p>GloboPlay</p>
               <p>HBO Max</p>
-            </div>
-          </div>
-        </div>
-        <div class="filme-caixa">
-          <img src="img/homem-do-futuro.jpg" alt="" />
-          <div class="filme-desc">
-            <h3>O Homem do Futuro (2011)</h3>
-            <p class="filme-sobre">
-              Um cientista frustrado inventa acidentalmente uma máquina do tempo
-              e volta ao passado para corrigir os erros de sua juventude, mas as
-              coisas não saem como planejado.
-            </p>
-            <p class="filme-diretor"><span>Direção:</span> Cláudio Torres</p>
-            <p class="filme-elenco">
-              <span>Elenco principal:</span>
-              Wagner Moura, Alinne Moraes, Maria Luísa Mendonça, Gabriel Braga
-              Nunes, Fernando Ceylão
-            </p>
-            <div class="onde-assistir">
-              <span>Disponivel em:</span>
-              <p>GloboPlay</p>
-              <p>Netflix</p>
             </div>
           </div>
         </div>
@@ -379,6 +355,256 @@
             <div class="onde-assistir">
               <span>Disponivel em:</span>
               <p>MUBI</p>
+            </div>
+          </div>
+        </div>
+        <h2>Ficção/Fantasia</h2>
+        <div class="filme-caixa">
+          <img src="img/homem-do-futuro.jpg" alt="" />
+          <div class="filme-desc">
+            <h3>O Homem do Futuro (2011)</h3>
+            <p class="filme-sobre">
+              Um cientista frustrado inventa acidentalmente uma máquina do tempo
+              e volta ao passado para corrigir os erros de sua juventude, mas as
+              coisas não saem como planejado.
+            </p>
+            <p class="filme-diretor"><span>Direção:</span> Cláudio Torres</p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Wagner Moura, Alinne Moraes, Maria Luísa Mendonça, Gabriel Braga
+              Nunes, Fernando Ceylão
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>GloboPlay</p>
+              <p>Netflix</p>
+            </div>
+          </div>
+        </div>
+        <div class="filme-caixa">
+          <img src="img/bacurau.jpg" alt="" />
+          <div class="filme-desc">
+            <h3>Bacurau (2019)</h3>
+            <p class="filme-sobre">
+              Um pequeno vilarejo no sertão brasileiro desaparece dos mapas e
+              passa a ser alvo de um grupo de invasores estrangeiros em busca de
+              diversão macabra.
+            </p>
+            <p class="filme-diretor">
+              <span>Direção:</span> Kleber Mendonça Filho e Juliano Dornelles
+            </p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Sônia Braga, Udo Kier, Bárbara Colen, Thomas Aquino, Silvero
+              Pereira
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>GloboPlay</p>
+              <p>HBO Max</p>
+            </div>
+          </div>
+        </div>
+        <div class="filme-caixa">
+          <img src="img/aquarius.jpg" alt="" />
+          <div class="filme-desc">
+            <h3>Aquarius (2016)</h3>
+            <p class="filme-sobre">
+              Clara, uma crítica musical aposentada, resiste às pressões de uma
+              construtora que quer demolir o edifício Aquarius, onde ela guarda
+              suas memórias.
+            </p>
+            <p class="filme-diretor">
+              <span>Direção:</span> Kleber Mendonça Filho
+            </p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Sônia Braga, Humberto Carrão, Maeve Jinkings, Irandhir Santos,
+              Zoraide Coleto
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>GloboPlay</p>
+              <p>Netflix</p>
+            </div>
+          </div>
+        </div>
+        <div class="filme-caixa">
+          <img src="img/branco-sai-preto-fica.jpg" alt="" />
+          <div class="filme-desc">
+            <h3>Branco Sai, Preto Fica (2014)</h3>
+            <p class="filme-sobre">
+              Em uma Ceilândia distópica, dois homens vítimas de violência
+              policial recebem a visita de um viajante do tempo em busca de
+              provas contra o Estado brasileiro.
+            </p>
+            <p class="filme-diretor"><span>Direção:</span> Adirley Queirós</p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Marquim do Tropa, Shokito, Dilmar Durães, Gleide Firmino, Dilma
+              Campos
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>MUBI</p>
+            </div>
+          </div>
+        </div>
+        <h2>Romance</h2>
+        <div class="filme-caixa">
+          <img src="img/eu-tu-eles.jpg" alt="" />
+          <div class="filme-desc">
+            <h3>Eu Tu Eles (2000)</h3>
+            <p class="filme-sobre">
+              No sertão nordestino, Darlene vive com três homens e tem filhos
+              com cada um deles, desafiando as convenções sociais em uma
+              história inspirada em fatos reais.
+            </p>
+            <p class="filme-diretor">
+              <span>Direção:</span> Andrucha Waddington
+            </p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Regina Casé, Lima Duarte, Stênio Garcia, Luiz Carlos Vasconcelos,
+              Nilda Spencer
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>GloboPlay</p>
+              <p>PrimeVideo</p>
+            </div>
+          </div>
+        </div>
+        <div class="filme-caixa">
+          <img src="img/abril-despedaçado.jpg" alt="" />
+          <div class="filme-desc">
+            <h3>Abril Despedaçado (2001)</h3>
+            <p class="filme-sobre">
+              No sertão brasileiro de 1910, uma família está presa em uma
+              sangrenta vingança. O jovem Tonho deve decidir entre seguir a
+              tradição ou buscar a liberdade.
+            </p>
+            <p class="filme-diretor"><span>Direção:</span> Walter Salles</p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Rodrigo Santoro, José Dumont, Rita Assemany, Luiz Carlos
+              Vasconcelos, Flavia Marco Antonio
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>Telecine</p>
+              <p>PrimeVideo</p>
+            </div>
+          </div>
+        </div>
+        <div class="filme-caixa">
+          <img src="img/se-eu-fosse-voce.jpeg" alt="" />
+          <div class="filme-desc">
+            <h3>Se Eu Fosse Você (2006)</h3>
+            <p class="filme-sobre">
+              Um casal em crise acorda num dia tendo trocado de corpos. Eles
+              precisam viver a vida um do outro até descobrirem como reverter a
+              situação.
+            </p>
+            <p class="filme-diretor"><span>Direção:</span> Daniel Filho</p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Tony Ramos, Glória Pires, Lavínia Vlasak, Danilo Grangheia, Thiago
+              Lacerda
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>GloboPlay</p>
+              <p>PrimeVideo</p>
+            </div>
+          </div>
+        </div>
+        <h2>Animação</h2>
+        <div class="filme-caixa">
+          <img src="img/amor-e-furia.png" alt="" />
+          <div class="filme-desc">
+            <h3>Uma História de Amor e Fúria (2013)</h3>
+            <p class="filme-sobre">
+              Em quatro períodos da história do Brasil, um guerreiro imortal
+              luta ao lado de seu amor através de séculos, da colonização até um
+              futuro distópico.
+            </p>
+            <p class="filme-diretor"><span>Direção:</span> Luiz Bolognesi</p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Selton Mello, Camila Pitanga, Rodrigo Santoro, Julio Andrade, Luís
+              Miranda
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>Gloogle Play</p>
+              <p>PrimeVideo</p>
+            </div>
+          </div>
+        </div>
+        <div class="filme-caixa">
+          <img src="img/o-menino-e-o-mundo.jpeg" alt="" />
+          <div class="filme-desc">
+            <h3>O Menino e o Mundo (2013)</h3>
+            <p class="filme-sobre">
+              Um menino deixa sua pequena vila para procurar o pai que partiu em
+              busca de trabalho. Uma jornada visualmente deslumbrante sobre
+              desigualdade e esperança.
+            </p>
+            <p class="filme-diretor"><span>Direção:</span> Alê Abreu</p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Vinicius Garcia, Marco Aurélio Campos, Lu Horta, Alê Abreu
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>Netflix</p>
+              <p>PrimeVideo</p>
+            </div>
+          </div>
+        </div>
+        <div class="filme-caixa">
+          <img src="img/perlimps.jpg" alt="" />
+          <div class="filme-desc">
+            <h3>Perlimps (2022)</h3>
+            <p class="filme-sobre">
+              Claé e Bruô habitam um mundo dividido por um muro que separa suas
+              culturas. Juntos, eles embarcam em uma jornada em busca de
+              Perlimps, criaturas que podem unir tudo.
+            </p>
+            <p class="filme-diretor"><span>Direção:</span> Alê Abreu</p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Lynn Cruz, Fernando Alves Pinto, Matheus Nachtergaele, Dira Paes,
+              Cássia Kiss
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>Globoplay</p>
+            </div>
+          </div>
+        </div>
+        <div class="filme-caixa">
+          <img src="img/tito-e-os-passaros.webp" alt="" />
+          <div class="filme-desc">
+            <h3>Tito e os Pássaros (2018)</h3>
+            <p class="filme-sobre">
+              Em um mundo onde o medo é uma epidemia que transforma pessoas em
+              pedra, o jovem Tito busca a cura criada por seu pai desaparecido.
+            </p>
+            <p class="filme-diretor">
+              <span>Direção:</span> Gustavo Steinberg, Gabriel Bitar e André
+              Catoto
+            </p>
+            <p class="filme-elenco">
+              <span>Elenco principal:</span>
+              Pedro Henrique, Mateus Solano, Denise Fraga, Matheus Nachtergaele,
+              Otávio Augusto
+            </p>
+            <div class="onde-assistir">
+              <span>Disponivel em:</span>
+              <p>Netflix</p>
+              <p>PrimeVideo</p>
             </div>
           </div>
         </div>
